[gd_scene load_steps=9 format=3 uid="uid://cwb8h8uacacpr"]

[ext_resource type="Script" path="res://Derp_Star/Laser/Muh_Lazer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://rr5xbhsjp4r2" path="res://Derp_Star/Laser/laser_circle.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cbhwnj0yupdlm" path="res://Derp_Star/Laser/lightning.png" id="4"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(671, 44)

[sub_resource type="Gradient" id="6"]
offsets = PackedFloat32Array(0, 0.33, 0.66, 1)
colors = PackedColorArray(0, 0.666667, 1, 0.784314, 1, 1, 1, 0.784314, 1, 1, 1, 0.784314, 0, 0.666667, 1, 0.784314)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("6")
width = 112

[sub_resource type="ParticleProcessMaterial" id="4"]
spread = 0.0
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.705882)

[sub_resource type="ParticleProcessMaterial" id="5"]
spread = 0.0
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.705882)

[node name="Muh_Lazer" type="Node2D"]
script = ExtResource("1")
energy_cost = 15

[node name="Circle" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="Beam" type="Area2D" parent="."]
collision_layer = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam"]
position = Vector2(340.5, 2)
shape = SubResource("3")

[node name="Gradient" type="TextureRect" parent="Beam"]
offset_top = 26.0
offset_right = 52.0
offset_bottom = 707.0
rotation = -1.5708
texture = SubResource("2")
expand_mode = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="Beam"]
visible = false
amount = 25
process_material = SubResource("4")
texture = ExtResource("4")
lifetime = 5.5
preprocess = 5.5

[node name="Particles2D2" type="GPUParticles2D" parent="Beam"]
visible = false
amount = 26
process_material = SubResource("5")
texture = ExtResource("4")
lifetime = 5.5
preprocess = 5.5

[connection signal="body_entered" from="Beam" to="." method="_on_Beam_body_entered"]
[connection signal="body_exited" from="Beam" to="." method="_on_Beam_body_exited"]
[connection signal="body_shape_entered" from="Beam" to="." method="_on_Beam_body_shape_entered"]
[connection signal="body_shape_exited" from="Beam" to="." method="_on_Beam_body_shape_exited"]
